Fail authentication if no matching account found and registration is not allowed

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -1,6 +1,7 @@
 en:
   site_settings:
     vivokey_openid_enabled: Enable VivoKey OpenID authentication. Customize user interface text <a href='%{base_path}/admin/customize/site_texts?q=js.login.vivokey'>here</a>
+    vivokey_openid_registration: "Enable new account registration"
     vivokey_openid_discovery_document: "VivoKey OpenID discovery document URL. Normally located at 'https://your.domain/.well-known/openid-configuration'"
     vivokey_openid_client_id: "VivoKey OpenID client ID"
     vivokey_openid_client_secret: "VivoKey OpenID client secret"
@@ -9,3 +10,5 @@ en:
     vivokey_openid_error_redirects: "If the callback error_reason contains the first parameter, the user will be redirected to the URL in the second parameter"
     vivokey_openid_allow_association_change: "Allow users to disconnect and reconnect their Discourse accounts from the VivoKey OpenID provider"
     vivokey_openid_verbose_logging: "Log detailed VivoKey OpenID authentication information to `/logs`. Keep this disabled during normal use."
+  vivokey_openid:
+    registration_not_allowed: "Account registration via VivoKey OpenID is not allowed."
