change "confirm" to "verify"

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -5,3 +5,7 @@ en:
         name: "VivoKey OpenID"
         title: "with VivoKey"
         message: "Authenticating with VivoKey OpenID"
+    user:
+      email:
+        ok: "We will email you to verify"
+        authenticated: "Your email address is verified by {{provider}}"
